--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ClienteCRUDProviderEHVM">
+        <activity android:name=".ui.SeleccionarUno"></activity>
+        <activity android:name=".ui.Modificar" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
