--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.clientecrudproviderehvm">
-
+    <uses-permission android:name="net.ivanvega.actividadesenandorid.WRITE_PERMISSION"/>
+    <uses-permission android:name="net.ivanvega.actividadesenandorid.READ_PERMISSION"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
